--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	<br style="clear: both;">
 
 	<footer>
-	<p>This brief diversion was crafted by <a href="http://www.decontextualize.com">Adam Parrish</a>. <a href="http://twitter.com/aparrish">Follow me on Twitter</a>.</p>
+	<p>This brief diversion was crafted by <a href="http://www.decontextualize.com">Adam Parrish</a> (<a href="http://twitter.com/aparrish">@aparrish</a>). <a href="https://github.com/aparrish/twitteravatarkeyboard">Fork the code on Github.</a></p>
 	<p>&nbsp;</p>
 	<p><a href="https://twitter.com/share" class="twitter-share-button">Tweet</a></p>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
